WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258849
tracePoint(ScheduleRenderingUpdate) should not be invoked if there is a scheduled rendering update already
https://bugs.webkit.org/show_bug.cgi?id=258849
Summary
tracePoint(ScheduleRenderingUpdate) should not be invoked if there is a sched...
Antti Koivisto
Reported
2023-07-04 01:10:07 PDT
We fire the tracepoint unnecessarily.
Attachments
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2023-07-04 01:10:29 PDT
rdar://110032497
Antti Koivisto
Comment 2
2023-07-04 01:29:30 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15536
EWS
Comment 3
2023-07-04 23:17:36 PDT
Committed
265761@main
(3fb0572dade2): <
https://commits.webkit.org/265761@main
> Reviewed commits have been landed. Closing PR #15536 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug