tracePoint(ScheduleRenderingUpdate) should not be invoked if there is a scheduled rendering update already https://bugs.webkit.org/show_bug.cgi?id=258849 rdar://110032497

Reviewed by Simon Fraser.

Firing tracepoints is not free, especially on non-production kernels.

* Source/WebCore/page/RenderingUpdateScheduler.cpp:
(WebCore::RenderingUpdateScheduler::adjustRenderingUpdateFrequency):
(WebCore::RenderingUpdateScheduler::isScheduled const):

Make isScheduled() work in all cases, not just for the timer fallback.
This way we bail out early if there a scheduled update already.

(WebCore::RenderingUpdateScheduler::startTimer):

Get rid of the unneeded and confusing m_scheduled bit.

(WebCore::RenderingUpdateScheduler::clearScheduled):
* Source/WebCore/page/RenderingUpdateScheduler.h:

Canonical link: https://commits.webkit.org/265761@main